--- a/clipdown/2023/webview/reward/resource/css/common.css
+++ b/clipdown/2023/webview/reward/resource/css/common.css
@@ -78,6 +78,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .ellipsis-multi{display: -webkit-box; overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: 3; -webkit-box-orient: vertical; line-height: 1.5; letter-spacing: -.3px;}
 .hide{display:none;}
 .hidden{position: absolute; left: 0; top: -9999px;}
+.scrollLock { overflow: hidden; }
 .clear{zoom:1; clear:both;}
 .clear:after{content:" "; display:block; clear:both;}
 .skip{position:absolute; left:0; top:-100px; z-index:1000; width:100%; height:60px; line-height:60px; text-align:center; font-size:20px; color:#fff; transition:all 0.5s; background:#666;}
