--- a/helpsearch/2023/mobile/resource/css/style_m.css
+++ b/helpsearch/2023/mobile/resource/css/style_m.css
@@ -91,7 +91,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 
 .wrap{position: relative;}
 .container{position: relative; width: 100%; max-width: 780px; margin: 0 auto; padding: 0 20px;}
-.divider_line{position: relative; width: 100%; max-width: 780px; margin: 0 auto; padding: 0 20px; vertical-align: middle;}
+.divider_line{position: relative; width: 100%; max-width: 780px; margin: 0 auto; vertical-align: middle;}
 .divider_line span{display: block; position: relative; width: 100%; height: 1px; top:1px; border-top: 1px solid #bcbcbc;}
 .divider_line .line_double{display: block; top:2px; border-top: 1px solid #bcbcbc;}
 
@@ -104,8 +104,6 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .link_text{display: inline-block; font-size: 16px; font-size: 1.6rem; line-height: 1.6; font-weight: 700; color: #0085e2; text-overflow: ellipsis;}
 .link_more{float: right; color: #0085e2; font-size: 14px; font-size: 1.4rem; font-weight: 700; margin-right: 15px;}
 .link_more:after{content: ''; position: absolute; width: 8px; height: 8px; right: 22px; border-right: 2px solid #0085e2; border-bottom: 2px solid #0085e2; margin-top: 4px; transform: rotate(-45deg);}
-
-
 
 /* Content Columns */
 .row-contents {position: relative; overflow: hidden; margin-left: -10px; margin-right: -10px;}
@@ -130,7 +128,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .section_middle{}
 .bg_gray{background: #f7f7f7;}
 .section_top .header_title{text-align: center; padding-top: 50px;}
-.section_top .header_title h1{font-size: 5.8vw; letter-spacing: -1px;}
+.section_top .header_title h1{font-size: 5.7vw; letter-spacing: -1px;}
 .section_top .header_title h1 b{font-weight: 900;}
 
 .content_search_bar{display: flex; flex-wrap: nowrap; justify-content: center; align-items: center; width: 100%; padding: 20px 0;}
@@ -199,10 +197,10 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .list_result .pictures a:after{content: ''; display: block; padding-bottom: 100%;}
 .list_result .pictures a:hover{border: 3px solid #0085e2;}
 
-.content_aside{position: absolute; width: 35%; top: 0; right: -300px;}
+.content_aside{position: absolute; width: 35%; top: 0; right: -300px; margin: 35px 0 35px;}
 .content_aside .img_ad_box{display: inline-block; position: relative; background: #f7f7f7; width: 250px; height: 250px;}
 @media (max-width: 767px){
-	.content_aside{position: relative; width: 100%; right: 0; text-align: center; padding: 50px 0 0px;}
+	.content_aside{position: relative; width: 100%; right: 0; text-align: center; padding: 50px 0 0px; margin: 0 0 35px 0;}
 
 }
 
