--- a/helpsearch/2023/helpstart/resource/css/style_m.css
+++ b/helpsearch/2023/helpstart/resource/css/style_m.css
@@ -137,7 +137,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .content_search_bar .form_searchbar{display: flex; flex-grow: 1; flex-shrink: 0; flex-basis: 200px;}
 .content_search_bar .input_group{display: flex; width: 100%;}
 .content_search_bar .form_control{display: inline-block; width: 100%; height: 48px; background: #fff; font-size:16px; font-size: 1.6rem; font-weight: 700; border: 2px solid #0085e2; padding: 5px 10px;}
-.content_search_bar .input_group .btn_search{flex-shrink: 0; background: #0085e2; border: 2px solid #0085e2; color: #fff; font-size:16px; font-size: 1.6rem; font-weight: 700; padding: 5px 20px; margin-left: -2px; cursor: pointer;}
+.content_search_bar .input_group .btn_search{flex-shrink: 0; background: #0085e2; border: 2px solid #0085e2; color: #fff; font-size:16px; font-size: 1.6rem; font-weight: 700; padding: 5px 20px; margin-left: -2px;}
 
 .content_shop{position: relative; padding: 60px 0;}
 .content_shop .list_stie{position: relative; overflow: hidden; max-width: 728px; margin:0 auto;}
@@ -279,16 +279,4 @@ svg{max-width: 100%; width: 100%; user-select : none;}
     .infinite_scroll .loader {opacity: 0;}
     .infinite_scroll.active .loader {opacity: 1;} 
     .section_footer {padding: 40px 10px 20px;}  
-    .wrap_helpsearch.wrap_search .content_search_bar{padding: 20px 0 20px;}
 }
-
-
-.wrap_helpsearch .content_search_bar .btn_logo{width: 63px; margin-right: 10px;}
-.wrap_helpsearch .content_search_bar .btn_logo img{width: 63px;}
-.wrap_helpsearch .content_search_bar .form_control{height: 63px; border: 2px solid #ff0000;}
-.wrap_helpsearch .content_search_bar .input_group .btn_search{font-size: 18px;font-size: 1.8rem; background: #ff0000; border: 2px solid #ff0000; padding: 5px 40px}  
-.wrap_helpsearch.wrap_search .content_search_bar .btn_logo img{width: 48px;}
-.wrap_helpsearch.wrap_search .content_search_bar .form_control{height: 48px; border: 2px solid #ff0000;}
-.wrap_helpsearch.wrap_search .content_search_bar .input_group .btn_search{font-size: 16px;font-size: 1.6rem; background: #ff0000; border: 2px solid #ff0000; padding: 5px 20px}  
-
-
