--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -115,7 +115,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 
 /* Point Badge Style */
 .badge_point{display: inline-block; position: relative; min-width: 78px; height: 32px; background: #e21d19; color: #fff; text-align: center; line-height: 1.5; border-radius: 30px; padding: 4px 4px 4px 29px; -webkit-touch-callout: none; user-select: none;}
-.badge_point .icon_point{position: absolute; top:6px; left: 6px; width: 20px; height: 20px; background: #fff; color: #e21d19;  font-size: 14px; font-size: 1.4rem; font-weight: 700; line-height: 1; border-radius:50%; padding: 3px 4px;}
+.badge_point .icon_point{position: absolute; top:6px; left: 6px; width: 20px; height: 20px; background: #fff; color: #e21d19;  font-size: 14px; font-size: 1.4rem; font-weight: 700; line-height: 1; border-radius:50%; padding: 4px 4px;}
 .badge_point .point_data{font-weight: 700; line-height: 2; padding: 0 6px 0 0;}
 
 /* Button Style */
@@ -238,6 +238,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 
 @media screen and (max-width: 767px){
     .list_pagination{display: none;}
+    .list_pagination.point{display: block; padding: 10px 0 40px 0;}
     .m_list_pagination{display: block;}  
     .loader {display: block; margin: 0 auto; width: 24px; height: 24px; animation: loader_animate 2s linear infinite;}      
     .loader circle {stroke-width: 4px; stroke-dasharray: 1, 150; stroke-dashoffset: 0; stroke-linecap: round; animation: stroke_animate 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite; stroke: #efefef;}
@@ -460,6 +461,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 
 .section_mypage, .section_errorpage{min-height: 100%;}
 .webview_cashmate .section_mb{background: #F7F7F7; padding: 0;}
+.webview_cashmate .section_mb.section_mypage, .webview_cashmate .section_mb.section_errorpage{background: #fff;}
 .webview_cashmate .section_mb .contents{background: #fff; padding: 0 20px; margin-bottom: 10px;}
 .webview_cashmate .section_mb .contents:last-child{margin-bottom: 0;}
 .webview_cashmate .section_mb .contents_top{display: block; padding: 0; margin-bottom: 0;}
