--- a/helpsearch/2023/mobile/resource/css/style_m.css
+++ b/helpsearch/2023/mobile/resource/css/style_m.css
@@ -148,7 +148,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 
 /* AD banner */
 .content_ad{position: relative; padding: 0 0 60px;}
-.ad_banner{position: relative; background: transparent; border: 1px solid transparent;}
+.ad_banner{position: relative; background: #fff; border: 1px solid transparent;}
 .ad_banner.bottom{width: 100%; min-height: 50px; text-align: center;}
 
 /* footer */
@@ -262,7 +262,6 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 @media (max-width: 767px){
     .content_shop .list_stie li{width: 33.333%; float: left;; padding: 5px 5px;}
 	.content_aside{position: relative; width: 100%; right: 0; text-align: center; padding: 50px 0 0px; margin: 0 0 35px 0;}
-
 }
 
 @media screen and (max-width: 640px){
@@ -286,9 +285,12 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .wrap_helpsearch .content_search_bar .btn_logo{width: 63px; margin-right: 10px;}
 .wrap_helpsearch .content_search_bar .btn_logo img{width: 63px;}
 .wrap_helpsearch .content_search_bar .form_control{height: 63px; border: 2px solid #ff0000;}
-.wrap_helpsearch .content_search_bar .input_group .btn_search{font-size: 18px;font-size: 1.8rem; background: #ff0000; border: 2px solid #ff0000; padding: 5px 40px}  
+.wrap_helpsearch .content_search_bar .input_group .btn_search{font-size: 18px; font-size: 1.8rem; background: #ff0000; border: 2px solid #ff0000; padding: 5px 40px}  
 .wrap_helpsearch.wrap_search .content_search_bar .btn_logo img{width: 48px;}
 .wrap_helpsearch.wrap_search .content_search_bar .form_control{height: 48px; border: 2px solid #ff0000;}
 .wrap_helpsearch.wrap_search .content_search_bar .input_group .btn_search{font-size: 16px;font-size: 1.6rem; background: #ff0000; border: 2px solid #ff0000; padding: 5px 20px}  
-
-
+@media (max-width: 767px){
+    .wrap_helpsearch .content_search_bar .btn_logo{width: 48px;}
+    .wrap_helpsearch .content_search_bar .form_control{height: 48px;}
+    .wrap_helpsearch .content_search_bar .input_group .btn_search{font-size: 16px; font-size: 1.6rem; padding: 5px 20px;}
+}
