--- a/helpsearch/2023/helpstart/resource/css/style_m.css
+++ b/helpsearch/2023/helpstart/resource/css/style_m.css
@@ -149,7 +149,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .content_ad{position: relative; padding: 0 0 60px;}
 .ad_banner{position: relative; background: #fff; border: 1px solid transparent;}
 .ad_banner.bottom{width: 100%; min-height: 60px; text-align: center;}
-.section_middle .ad_banner{background: #f7f7f7;}
+.section_middle.bg_gray .ad_banner{background: #f7f7f7;}
 .wrap_search .content_ad{display: none;}
 
 /* footer */
