--- a/clipdown/2023/webview/view/index.html
+++ b/clipdown/2023/webview/view/index.html
@@ -30,14 +30,58 @@
 <body>
     <div class="wrap">
         <!-- 클립다운 다운로드 제안 이미지 -->
-        <div id="clipdown_suggest" style="position: fixed; bottom: 20px; right:20px; z-index: 500; display: none">
+        <div id="clipdown_suggest" class="clipdown_suggest" style="position: fixed; bottom: 20px; right:20px; z-index: 500; display: block">
             <a href="#" class="close"></a>
-            <img src="../../images/clipdown_suggest.png" style="width: 400px; height: auto" usemap="#downloadMap"/>
+            <img src="../view/resource/images/clipdown_suggest.png" style="width: 400px; height: auto" usemap="#downloadMap"/>
             <map name="downloadMap" id="downloadMap">
                 <area shape="rect" coords="95,157,304,200" style="cursor: pointer">
             </map>
         </div>
         <!-- // 클립다운 다운로드 제안 이미지 -->
+        <section class="section_header">
+            <div class="header">
+                <div class="container">
+                    <a href="#" class="logo_clipdown">
+                        <!-- <img src="../view/resource/images/logo_clipdown.png" alt="클립다운"> -->
+                        <svg id="logo_clipdown" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="86" height="auto" viewBox="0 0 86 39.56">
+                            <defs>
+                              <clipPath id="clip-path">
+                                <rect id="Rectangle_11" data-name="Rectangle 11" width="86" height="39.56" fill="none"/>
+                              </clipPath>
+                              <clipPath id="clip-path-2">
+                                <path id="Path_42" data-name="Path 42" d="M103.982,0c-9.8,0-18.052,1.655-20.61,3.913a10.6,10.6,0,0,0-4.724,7.448,39.973,39.973,0,0,0-.824,8.419,39.973,39.973,0,0,0,.824,8.419,10.605,10.605,0,0,0,4.723,7.448c2.559,2.259,10.814,3.914,20.61,3.914s18.052-1.655,20.61-3.914a10.606,10.606,0,0,0,4.724-7.448,39.971,39.971,0,0,0,.824-8.419,39.971,39.971,0,0,0-.824-8.419,10.606,10.606,0,0,0-4.724-7.448C122.034,1.655,113.778,0,103.982,0Z" transform="translate(-77.824)" fill="none"/>
+                              </clipPath>
+                              <linearGradient id="linear-gradient" x1="-0.649" y1="1" x2="-0.64" y2="1" gradientUnits="objectBoundingBox">
+                                <stop offset="0" stop-color="#c5081d"/>
+                                <stop offset="1" stop-color="#dc141c"/>
+                              </linearGradient>
+                            </defs>
+                            <g id="Group_40" data-name="Group 40">
+                              <g id="Group_39" data-name="Group 39" clip-path="url(#clip-path)">
+                                <path id="Path_39" data-name="Path 39" d="M7.378,31.1a5.637,5.637,0,0,0-1.915.314,4.19,4.19,0,0,0-1.5.912A4.132,4.132,0,0,0,2.978,33.8a5.356,5.356,0,0,0-.353,2.009,5.544,5.544,0,0,0,.322,1.971A3.745,3.745,0,0,0,3.87,39.2a3.9,3.9,0,0,0,1.469.859,6.175,6.175,0,0,0,1.966.29,11.732,11.732,0,0,0,1.608-.114,9.967,9.967,0,0,0,1.535-.333v2a12.614,12.614,0,0,1-1.567.3,13.562,13.562,0,0,1-1.743.109,9.535,9.535,0,0,1-3.1-.461,6.139,6.139,0,0,1-2.236-1.3A5.362,5.362,0,0,1,.451,38.542,7.153,7.153,0,0,1,0,35.954a7.4,7.4,0,0,1,.483-2.7A6.189,6.189,0,0,1,1.873,31.1a6.365,6.365,0,0,1,2.273-1.434,8.714,8.714,0,0,1,3.087-.532,12.225,12.225,0,0,1,1.671.109,8.752,8.752,0,0,1,1.422.308v1.976A10.873,10.873,0,0,0,8.779,31.2a10.628,10.628,0,0,0-1.4-.1" transform="translate(0 -16.469)" fill="#141519"/>
+                                <rect id="Rectangle_10" data-name="Rectangle 10" width="2.459" height="13.755" transform="translate(12.305 11.858)" fill="#141519"/>
+                                <path id="Path_40" data-name="Path 40" d="M39.184,27.276h2.584v2.441H39.184Zm.062,4.55h2.459v9.2H39.246Z" transform="translate(-22.15 -15.418)" fill="#141519"/>
+                                <path id="Path_41" data-name="Path 41" d="M55.144,46.888a3.822,3.822,0,0,1-1.468-.271,3.666,3.666,0,0,1-1.1-.669H52.54q.01.19.021.536c.007.231.01.483.01.755v3.828H50.112V37.446H52.27l.1,1.036h.041a3.552,3.552,0,0,1,1.173-.907,3.678,3.678,0,0,1,1.66-.356,4.811,4.811,0,0,1,1.613.28,3.928,3.928,0,0,1,1.406.859,4.216,4.216,0,0,1,.981,1.463,5.444,5.444,0,0,1,.368,2.1,5.688,5.688,0,0,1-.394,2.218,4.541,4.541,0,0,1-1.038,1.548,4.2,4.2,0,0,1-1.427.907,4.557,4.557,0,0,1-1.614.294m-.322-7.865a2.883,2.883,0,0,0-1.224.29,3.455,3.455,0,0,0-1.027.755v4.1a2.975,2.975,0,0,0,.373.323,3.151,3.151,0,0,0,1.084.513,2.7,2.7,0,0,0,.68.085,2.238,2.238,0,0,0,1.017-.223,2.022,2.022,0,0,0,.742-.631,3.013,3.013,0,0,0,.451-.974,5.257,5.257,0,0,0-.005-2.56,2.65,2.65,0,0,0-.456-.931,1.933,1.933,0,0,0-.711-.56,2.2,2.2,0,0,0-.924-.19" transform="translate(-28.327 -21.038)" fill="#141519"/>
+                              </g>
+                            </g>
+                            <g id="Group_42" data-name="Group 42" transform="translate(33.684)">
+                              <g id="Group_41" data-name="Group 41" clip-path="url(#clip-path-2)">
+                                <rect id="Rectangle_12" data-name="Rectangle 12" width="52.316" height="39.56" fill="url(#linear-gradient)"/>
+                              </g>
+                            </g>
+                            <g id="Group_44" data-name="Group 44">
+                              <g id="Group_43" data-name="Group 43" clip-path="url(#clip-path)">
+                                <path id="Path_43" data-name="Path 43" d="M87.9,42.964V31.642H91.17q.434,0,.883.026t.873.076q.425.051.823.123a6.406,6.406,0,0,1,.73.173,6.577,6.577,0,0,1,1.747.779A5.037,5.037,0,0,1,97.5,33.977a4.869,4.869,0,0,1,.776,1.494,5.854,5.854,0,0,1,.263,1.789,6.374,6.374,0,0,1-.222,1.714A4.747,4.747,0,0,1,96.5,41.6a6.046,6.046,0,0,1-1.631.825,9.329,9.329,0,0,1-1.784.406,16.805,16.805,0,0,1-2.246.135Zm3.2-1.735a7.809,7.809,0,0,0,3.106-.5,3.241,3.241,0,0,0,1.5-1.3,4.217,4.217,0,0,0,.509-2.183,4.384,4.384,0,0,0-.166-1.252,3.3,3.3,0,0,0-.48-.994,3.186,3.186,0,0,0-.763-.749,4.3,4.3,0,0,0-1.012-.516,5.789,5.789,0,0,0-1.174-.271,11.331,11.331,0,0,0-1.452-.084h-1v7.852Z" transform="translate(-49.686 -17.886)" fill="#fff"/>
+                                <path id="Path_44" data-name="Path 44" d="M123.024,42.665a4.752,4.752,0,0,1-.314,1.76,3.82,3.82,0,0,1-.9,1.362,4.03,4.03,0,0,1-1.419.876,5.31,5.31,0,0,1-1.858.309,5.438,5.438,0,0,1-1.89-.309,3.978,3.978,0,0,1-1.419-.876,3.8,3.8,0,0,1-.892-1.362,4.815,4.815,0,0,1-.31-1.76,4.75,4.75,0,0,1,.314-1.76,3.82,3.82,0,0,1,.9-1.362,4.03,4.03,0,0,1,1.419-.876,5.3,5.3,0,0,1,1.858-.309,5.426,5.426,0,0,1,1.89.309,3.976,3.976,0,0,1,1.419.876,3.8,3.8,0,0,1,.892,1.362,4.812,4.812,0,0,1,.31,1.76m-2.265,0a3.636,3.636,0,0,0-.166-1.15,2.42,2.42,0,0,0-.462-.838,1.869,1.869,0,0,0-.712-.507,2.379,2.379,0,0,0-.906-.17,2.319,2.319,0,0,0-.892.17,1.873,1.873,0,0,0-.707.507,2.413,2.413,0,0,0-.462.838,4.058,4.058,0,0,0,0,2.3,2.323,2.323,0,0,0,.467.833,1.97,1.97,0,0,0,.712.508,2.293,2.293,0,0,0,.9.173,2.263,2.263,0,0,0,.9-.173,1.941,1.941,0,0,0,.7-.508,2.37,2.37,0,0,0,.462-.833,3.637,3.637,0,0,0,.166-1.151" transform="translate(-64.453 -21.683)" fill="#fff"/>
+                                <path id="Path_45" data-name="Path 45" d="M141.445,41.051q-.259,1.227-.61,2.378l-1.082,3.6H137.6l-3.134-8.2h2.311l1.155,3.435q.4,1.193.7,2.31h.037q.259-1.083.619-2.31l1.026-3.435h2.311l1.008,3.435q.323,1.092.619,2.31h.037q.314-1.142.7-2.31l1.155-3.435h2.311l-3.134,8.2h-2.154l-1.082-3.6q-.37-1.21-.61-2.378Z" transform="translate(-76.01 -21.947)" fill="#fff"/>
+                                <path id="Path_46" data-name="Path 46" d="M169.472,39.7h.037a3.114,3.114,0,0,1,.49-.5,3.406,3.406,0,0,1,.675-.432,4.229,4.229,0,0,1,.836-.3,4.018,4.018,0,0,1,.975-.114,4.323,4.323,0,0,1,.947.1,2.976,2.976,0,0,1,.837.317,2.5,2.5,0,0,1,.67.558,2.558,2.558,0,0,1,.458.817,2.5,2.5,0,0,1,.125.571,7.029,7.029,0,0,1,.032.715v5.322h-2.191V41.75a4.925,4.925,0,0,0-.028-.567,1.529,1.529,0,0,0-.1-.414,1.065,1.065,0,0,0-.5-.559,1.814,1.814,0,0,0-.818-.169,2.858,2.858,0,0,0-1.225.275,3.11,3.11,0,0,0-1.04.8v5.644h-2.191v-8.2h1.811Z" transform="translate(-94.658 -21.682)" fill="#fff"/>
+                              </g>
+                            </g>
+                        </svg>                       
+                    </a>
+                </div>
+            </div>
+        </section>
 
         <section class="section_video">
             <div class="container">
@@ -66,13 +110,13 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24">
                                             <defs>
                                               <clipPath id="clip-path">
-                                                <rect id="사각형_39" data-name="사각형 39" width="24" height="24" transform="translate(32 389)"/>
+                                                <rect id="Rectangle_39" data-name="Rectangle 39" width="24" height="24" transform="translate(32 389)"/>
                                               </clipPath>
                                             </defs>
                                             <g id="icon_share" transform="translate(-32 -389)" clip-path="url(#clip-path)">
-                                              <path id="패스_86" data-name="패스 86" d="M15,5.63,20.66,12,15,18.37V14H14a14.947,14.947,0,0,0-9.75,3.09c1.84-4.07,5.11-6.4,9.89-7.1L15,9.86V5.63M14,3V9C6.22,10.13,3.11,15.33,2,21c2.78-3.97,6.44-6,12-6v6l8-9L14,3Z" transform="translate(32 389)"/>
+                                              <path id="Path_86" data-name="Path 86" d="M15,5.63,20.66,12,15,18.37V14H14a14.947,14.947,0,0,0-9.75,3.09c1.84-4.07,5.11-6.4,9.89-7.1L15,9.86V5.63M14,3V9C6.22,10.13,3.11,15.33,2,21c2.78-3.97,6.44-6,12-6v6l8-9L14,3Z" transform="translate(32 389)"/>
                                             </g>
-                                        </svg>                                          
+                                        </svg>                                                                                                                            
                                     </div>
                                 </a>
                             </div>
@@ -151,9 +195,9 @@
     </script>
     <script>
         $(window).resize(function() {
-        if($(window).width() < 768) {
-            $(".wrap").attr('class','wrap_dark')
-        }
+            if($(window).width() < 768) {
+                $(".wrap").attr('class','wrap_dark')
+            }
         });
 
         $(document).ready(function() {
