--- a/clipdown/2023/webview/view/index.html
+++ b/clipdown/2023/webview/view/index.html
@@ -107,16 +107,11 @@
                                 <a href="#" class="btn_share">
                                     <div class="item_data item_share">공유하기</div>
                                     <div class="icon_share">
-                                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24">
-                                            <defs>
-                                              <clipPath id="clip-path">
-                                                <rect id="Rectangle_39" data-name="Rectangle 39" width="24" height="24" transform="translate(32 389)"/>
-                                              </clipPath>
-                                            </defs>
-                                            <g id="icon_share" transform="translate(-32 -389)" clip-path="url(#clip-path)">
-                                              <path id="Path_86" data-name="Path 86" d="M15,5.63,20.66,12,15,18.37V14H14a14.947,14.947,0,0,0-9.75,3.09c1.84-4.07,5.11-6.4,9.89-7.1L15,9.86V5.63M14,3V9C6.22,10.13,3.11,15.33,2,21c2.78-3.97,6.44-6,12-6v6l8-9L14,3Z" transform="translate(32 389)"/>
+                                        <svg id="fi_2958783" enable-background="new 0 0 512.231 512.231" height="24" viewBox="0 0 512.231 512.231" width="24" xmlns="http://www.w3.org/2000/svg">
+                                            <g>
+                                                <path d="m271.249 121.448c-70.515 3.65-136.443 33.004-187.025 83.587-54.152 54.151-83.975 125.899-83.975 202.025v105.171l38.098-87.825c44.499-88.669 134.739-147.458 232.902-152.927v121.202l240.733-196.638-240.733-196.043zm30 29.612v-87.94l163.267 132.958-163.267 133.361v-88.379h-15c-56.878 0-112.732 15.993-161.522 46.249-36.948 22.913-68.428 53.121-92.593 88.604 15.408-126.529 123.493-224.853 254.115-224.853z"></path>
                                             </g>
-                                        </svg>                                                                                                                            
+                                        </svg>                                                                                                                                                            
                                     </div>
                                 </a>
                             </div>
